fix overflow behaviour of output box

--- a/src/main.scss
+++ b/src/main.scss
@@ -35,3 +35,7 @@ $main-padding: 20px;
 .input {
     font-family: monospace;
 }
+
+.output-pre {
+    overflow-x : scroll;
+}
